[project]
name = "accept-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "confluent-kafka>=2.8.0",
    "motor>=3.6.0",
    "psutil>=6.1.0",
    "pylint>=3.3.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "ruff>=0.8.0",
    "types-confluent-kafka>=1.3.1",
]

[tool.ruff]
fix=true
line-length = 90

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

exclude = [
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".venv",
]

[tool.pylint]
ignore = [
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".venv",
]
